crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_directive_v-pre-attribute-order_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{<><template><div v-pre:__v___ __v_id__="hello + 1"><p></p>{hello+2}</div></template></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 99,
        },
        original_span: Span {
            start: 0,
            end: 88,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 94,
        },
        original_span: Span {
            start: 0,
            end: 87,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 22,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 83,
        },
        original_span: Span {
            start: 13,
            end: 75,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 61,
        },
        original_span: Span {
            start: 13,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 23,
            end: 26,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 27,
            end: 39,
        },
        original_span: Span {
            start: 34,
            end: 39,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 27,
            end: 32,
        },
        original_span: Span {
            start: 34,
            end: 39,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 40,
            end: 60,
        },
        original_span: Span {
            start: 18,
            end: 33,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 40,
            end: 48,
        },
        original_span: Span {
            start: 18,
            end: 21,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 49,
            end: 60,
        },
        original_span: Span {
            start: 23,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 61,
            end: 68,
        },
        original_span: Span {
            start: 41,
            end: 52,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 61,
            end: 64,
        },
        original_span: Span {
            start: 41,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 62,
            end: 63,
        },
        original_span: Span {
            start: 42,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 64,
            end: 68,
        },
        original_span: Span {
            start: 48,
            end: 52,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 66,
            end: 67,
        },
        original_span: Span {
            start: 50,
            end: 51,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 68,
            end: 77,
        },
        original_span: Span {
            start: 53,
            end: 68,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 76,
        },
        original_span: Span {
            start: 56,
            end: 65,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 74,
        },
        original_span: Span {
            start: 56,
            end: 61,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 75,
            end: 76,
        },
        original_span: Span {
            start: 64,
            end: 65,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 77,
            end: 83,
        },
        original_span: Span {
            start: 69,
            end: 75,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 79,
            end: 82,
        },
        original_span: Span {
            start: 71,
            end: 74,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 83,
            end: 94,
        },
        original_span: Span {
            start: 76,
            end: 87,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 85,
            end: 93,
        },
        original_span: Span {
            start: 78,
            end: 86,
        },
    },
]
