crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_directive_v-pre_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{<><template><div v-pre:__v___ v-for="q of a">{Hi,there}<p></p></div></template></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 94,
        },
        original_span: Span {
            start: 0,
            end: 99,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 89,
        },
        original_span: Span {
            start: 0,
            end: 98,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 12,
            end: 22,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 13,
            end: 21,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 78,
        },
        original_span: Span {
            start: 13,
            end: 86,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 22,
            end: 55,
        },
        original_span: Span {
            start: 13,
            end: 39,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 23,
            end: 26,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 27,
            end: 39,
        },
        original_span: Span {
            start: 18,
            end: 23,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 27,
            end: 32,
        },
        original_span: Span {
            start: 18,
            end: 23,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 40,
            end: 54,
        },
        original_span: Span {
            start: 24,
            end: 38,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 40,
            end: 45,
        },
        original_span: Span {
            start: 24,
            end: 29,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 46,
            end: 54,
        },
        original_span: Span {
            start: 31,
            end: 37,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 55,
            end: 65,
        },
        original_span: Span {
            start: 44,
            end: 59,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 56,
            end: 64,
        },
        original_span: Span {
            start: 47,
            end: 56,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 56,
            end: 58,
        },
        original_span: Span {
            start: 47,
            end: 49,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 59,
            end: 64,
        },
        original_span: Span {
            start: 51,
            end: 56,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 65,
            end: 72,
        },
        original_span: Span {
            start: 64,
            end: 77,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 65,
            end: 68,
        },
        original_span: Span {
            start: 64,
            end: 67,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 66,
            end: 67,
        },
        original_span: Span {
            start: 65,
            end: 66,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 68,
            end: 72,
        },
        original_span: Span {
            start: 73,
            end: 77,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 70,
            end: 71,
        },
        original_span: Span {
            start: 75,
            end: 76,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 72,
            end: 78,
        },
        original_span: Span {
            start: 80,
            end: 86,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 74,
            end: 77,
        },
        original_span: Span {
            start: 82,
            end: 85,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 78,
            end: 89,
        },
        original_span: Span {
            start: 87,
            end: 98,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 80,
            end: 88,
        },
        original_span: Span {
            start: 89,
            end: 97,
        },
    },
]
