crates/vue_oxlint_jsx/src/test/snapshots/codegen/pass_modules_basic_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import { ref } from 'vue';export default {
  props: {
    msg: String
  }
};async()=>{<><template><div></div></template><script></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 142,
        },
        original_span: Span {
            start: 0,
            end: 139,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 26,
        },
        original_span: Span {
            start: 51,
            end: 77,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 26,
            end: 75,
        },
        original_span: Span {
            start: 79,
            end: 128,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 88,
            end: 120,
        },
        original_span: Span {
            start: 0,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 88,
            end: 98,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 89,
            end: 97,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 98,
            end: 109,
        },
        original_span: Span {
            start: 13,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 98,
            end: 103,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 99,
            end: 102,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 103,
            end: 109,
        },
        original_span: Span {
            start: 22,
            end: 28,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 105,
            end: 108,
        },
        original_span: Span {
            start: 24,
            end: 27,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 109,
            end: 120,
        },
        original_span: Span {
            start: 29,
            end: 40,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 111,
            end: 119,
        },
        original_span: Span {
            start: 31,
            end: 39,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 120,
            end: 137,
        },
        original_span: Span {
            start: 42,
            end: 138,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 120,
            end: 128,
        },
        original_span: Span {
            start: 42,
            end: 50,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 121,
            end: 127,
        },
        original_span: Span {
            start: 43,
            end: 49,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 128,
            end: 137,
        },
        original_span: Span {
            start: 129,
            end: 138,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 130,
            end: 136,
        },
        original_span: Span {
            start: 131,
            end: 137,
        },
    },
]
